Closed
Bug 124946
Opened 24 years ago
Closed 24 years ago
F6 and ctrl+tab no longer correctly cycles thru frames [tho' shift+F6/ctrl+shift+tab do work]
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Core
DOM: UI Events & Focus Handling
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: bugzilla, Assigned: yuanyi21)
References
(Blocks 1 open bug, )
Details
(Keywords: access, regression, topembed+, Whiteboard: seeking sr=)
Attachments
(2 files, 1 obsolete file)
|
1.19 KB,
patch
|
bryner
:
review+
hewitt
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
|
1.08 KB,
patch
|
bryner
:
review+
hewitt
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
found using 2002.02.11.1x comm bits on win2k and linux rh7.2. n/a on mac.
1. load a page containing frames, such as http://faqs.org/ or even viewer test
#9. have a copy of the latter at http://hopey.mcom.com/tests/test9.html
2. hit F6 to cycle through the frames.
results: F6 only goes btwn the urlbar and the first frame.
expected: F6 should cycle through the urlbar and all frames.
strangely, shift+F6 works fine.
will try narrow down when this regressed.
| Reporter | ||
Comment 1•24 years ago
|
||
looking at the linux builds i have, this regressed btwn the 2002.01.31.08
[working] and 2002.02.04.17 [broken] builds.
Keywords: nsbeta1,
regression
| Reporter | ||
Comment 2•24 years ago
|
||
narrowed down some more, based on linux comm builds: works fine in 2002.02.01.08
build, but broken in 2002.02.01.21 build.
side note: fwiw, F6 [and shift+F6] works fine in the mail 3pane window.
| Reporter | ||
Comment 3•24 years ago
|
||
at first i thought that ssu's accessibility checkins for the mail 3pane might be
involved. but then i searched and noticed he checked in around 1/29-ish, and the
builds btwn then and before the 9pm 2/1 build behaved just fine.
| Reporter | ||
Comment 6•24 years ago
|
||
ctrl+tab is also broken --although ctrl+shift+tab works.
Hardware: PC → All
Summary: F6 no longer correctly cycles thru frames [tho' shift+F6 does work] → F6 and ctrl+tab no longer correctly cycles thru frames [tho' shift+F6/ctrl+shift+tab do work]
Comment 7•24 years ago
|
||
nsbeta1- per ADT triage team
Comment 9•24 years ago
|
||
clearing nsbeta1- for retriage.
F6/Ctrl+tab is a big deal for keyboard navigation and accessibility, I think.
Comment 10•24 years ago
|
||
Nav triage team needs info: Is this required for section 508, or general
accessibility?
Whiteboard: [need info]
Comment 11•24 years ago
|
||
This is not required for Section 508, but it is a major accessibility
regression. It's a very important keystroke!
Comment 12•24 years ago
|
||
nsbeta1+ per Nav triage team.
| Assignee | ||
Comment 13•24 years ago
|
||
The logic of nsEventStateManager::GetNextDocShell()
is wrong when a item has not any children. In this case,
the function should return its next sibling (if exist),
rather than return nsnull.
| Assignee | ||
Comment 14•24 years ago
|
||
Hi, aaron and bryner, could you take a r= of this patch?
Comment 15•24 years ago
|
||
Okay, I understand that we were leaving the method too early if numChildren was
0 - it should still try to get the next sibling.
However, please start out the method with the line:
*aResult = nsnull;
So that it always sets it to null first.
This is good practice with "pure out parameters", in case the method returns early.
Do that, and I will put r=aaronl
| Assignee | ||
Comment 16•24 years ago
|
||
*aResult = nsnull; was added.
This is a major accessibility bug.
I think this patch should be checked in before 1.0 release.
Attachment #75130 -
Attachment is obsolete: true
Comment 17•24 years ago
|
||
rjesup, I think you broke this in rev 1.322 (bug 117667).
Comment 18•24 years ago
|
||
Comment on attachment 76114 [details] [diff] [review]
patch 2
r=bryner
Attachment #76114 -
Flags: review+
Comment 19•24 years ago
|
||
This was caused by my patch.
r=rjesup@wgate.com
Updated•24 years ago
|
Whiteboard: seeking sr=
Comment 20•24 years ago
|
||
Comment on attachment 76114 [details] [diff] [review]
patch 2
sr=hewitt
Attachment #76114 -
Flags: superreview+
Comment 21•24 years ago
|
||
Comment on attachment 76114 [details] [diff] [review]
patch 2
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #76114 -
Flags: approval+
Comment 22•24 years ago
|
||
Fixed on trunk. We are very grateful to Kyle Yuan for the patch.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 23•24 years ago
|
||
this is still is broken for me, using 2002.03.27.11 commercial verif bits on win2k.
reopening.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Reporter | ||
Comment 24•24 years ago
|
||
strange, this works on http://faqs.org/ and http://warp.mcom.com/ --but for some
reason is *broken* on http://wired.com/ and viewer test #9 for frames.
Comment 25•24 years ago
|
||
Kyle, you can find viewer test #9 under the Mozilla Debug menu -> Viewer Demos.
Very strange intermiitent behaviors are happening. It seems to be somtimes
affected by tabbed browser mode (Accel+T). However, wired.com never seems to
work correctly.
If you need more test cases, you can contact sairuh@netscape.com.
Assignee: bryner → kyle.yuan
Status: REOPENED → NEW
| Assignee | ||
Comment 26•24 years ago
|
||
I'm working on this issue. Hope it can be fixed soon.
| Assignee | ||
Comment 27•24 years ago
|
||
Another wrong logic in nsEventStateManager::GetNextDocShell.
Seeking next doc shell will stop, when the current item is the last child.
Fixed!
Comment 28•24 years ago
|
||
Comment on attachment 76493 [details] [diff] [review]
additional patch
r=bryner
Attachment #76493 -
Flags: review+
Comment 29•24 years ago
|
||
I concur, r=rjesup@wgate.com for what it's worth.
Comment 30•24 years ago
|
||
Comment on attachment 76493 [details] [diff] [review]
additional patch
sr=hewitt
Attachment #76493 -
Flags: superreview+
Comment 31•24 years ago
|
||
Comment on attachment 76493 [details] [diff] [review]
additional patch
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #76493 -
Flags: approval+
Comment 32•24 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 33•24 years ago
|
||
hey, this looks good --tested using 2002.04.09 comm bits on linux rh7.2, win2k
and mac 10.1.3.
the only hitch i found is a "dead spot" while cycling --but only on linux. gonna
verify this one, and filed bug 136420.
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•