Bug 124946. F6 and Ctrl+tab no longer correctly cycles through frames. r=bryner, r=rjesup, sr=hewitt, a=asa